# discord-haskell-extensions

./: .gitignore  LICENSE  README.md  discord-haskell-extensions.cabal  noglobot-hs.cabal  stack.yaml
example/: Main.hs
example/Bot/: ProcessMessage.hs
example/Bot/Cogs/: Base.hs
src/: Commands.hs  Main.hs  ProcessCommands.hs  ProcessMessage.hs
src/Cogs/: Base.hs
src/Discord/Ext/: Commands.hs  Mentionables.hs
src/Ext/: Commands.hs  Mentionables.hs
